syntax = "proto3";

option go_package = "github.com/cdrpl/granny/server/proto";

package proto;

service Auth {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
}

message SignUpRequest {
  string name = 1;
  string email = 2;
  string pass = 3;
}

message SignUpResponse {}

message SignInRequest {
  string email = 1;
  string pass = 2;
}

message SignInResponse {
  int32 id = 1;
  string token = 2;
  string name = 3;
}

service Room {
  rpc GetRoom (GetRoomRequest) returns (GetRoomResponse) {}
}

message GetRoomRequest {}

message GetRoomResponse {
  map<int32, User> users = 1;
}

message User {
  int32 id = 1;
  string name = 2;
}
